--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -16,6 +16,6 @@ monolog:
         nested:
             type:  stream
             path:  "%kernel.logs_dir%/%kernel.environment%.log"
-            level: debug
+            level: warning
         console:
             type:  console
