--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,18 @@
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
+
+nines_blog:
+    resource: "@NinesBlogBundle/Controller/"
+    type: annotation
+
+nines_user:
+    resource: "@NinesUserBundle/Controller/"
+    type: annotation
+
+nines_feedback:
+    resource: "@NinesFeedbackBundle/Controller/"
+    type: annotation
+
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
