--- a/composer.json
+++ b/composer.json
@@ -28,11 +28,28 @@
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
-        "twig/twig": "^1.0||^2.0"
+        "twig/twig": "^1.0||^2.0",
+        
+        "friendsofsymfony/user-bundle": "2.0.x-dev#612649c",
+        "twitter/bootstrap": "^3.3",
+        "components/jquery": "^3.1",
+        "knplabs/knp-paginator-bundle": "^2.5",
+        "egeloen/ckeditor-bundle": "^4.0",
+        "twig/extensions": "^1.4",
+        "beberlei/DoctrineExtensions": "^1.0",
+        "symfony/assetic-bundle": "^2.8",
+        "knplabs/knp-menu-bundle": "^2.0",
+        "bmatzner/jquery-ui-bundle": "^1.10"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^3.0"
+        "symfony/phpunit-bridge": "^3.0",
+        
+        "liip/functional-test-bundle": "^1.6",
+        "phpunit/phpunit": "^4.8",
+        "symfony/var-dumper": "^3.1",
+        "squizlabs/php_codesniffer": "^2.7",
+        "doctrine/doctrine-fixtures-bundle": "^2.3"
     },
     "scripts": {
         "symfony-scripts": [
