--- a/composer.json
+++ b/composer.json
@@ -31,15 +31,11 @@
         "twig/twig": "^1.0||^2.0",
         
         "friendsofsymfony/user-bundle": "2.0.x-dev#612649c",
-        "twitter/bootstrap": "^3.3",
-        "components/jquery": "^3.1",
         "knplabs/knp-paginator-bundle": "^2.5",
         "egeloen/ckeditor-bundle": "^4.0",
         "twig/extensions": "^1.4",
         "beberlei/DoctrineExtensions": "^1.0",
-        "symfony/assetic-bundle": "^2.8",
-        "knplabs/knp-menu-bundle": "^2.0",
-        "bmatzner/jquery-ui-bundle": "^1.10"
+        "knplabs/knp-menu-bundle": "^2.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
