--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -23,6 +23,7 @@ parameters:
     router.request_context.host: wphp.dv
     router.request_context.scheme: http
     router.request_context.base_url: /web/app_dev.php
+    secure_cookies: false
 
     # blog stuff
     nines_blog.excerpt_length: 100
