--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -42,6 +42,7 @@ twig:
     form_themes:      
         - 'bootstrap_3_horizontal_layout.html.twig'
         - '@NinesUtilBundle/Form/fields.html.twig'
+        - 'TetranzSelect2EntityBundle:Form:fields.html.twig'
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
     paths:
@@ -116,7 +117,10 @@ ivory_ck_editor:
     default_config: newn_config
     configs:
         newn_config:
-            toolbar: standard
+            toolbar:
+                - [ Source, -, Cut, Copy, Paste, PasteText, PasteFromWord, -, Undo, Redo ]
+                - [ Link, Unlink, Anchor, -, SpecialChar ]
+                - [ Format, Styles, -, Bold, Italic, Strike, -, RemoveFormat, -, NumberedList, BulletedList, -, Indent, Outdent, -, Blockquote, -, JustifyLeft, JustifyCenter, JustifyRight, JustifyBlock ]
 
 knp_menu:
     twig:
@@ -126,6 +130,12 @@ nines_feedback:
     default_status: submitted
     public_status: published
     commenting:
+        work:
+            class: AppBundle\Entity\Work
+            route: work_show
+        person:
+            class: AppBundle\Entity\Person
+            route: person_show
         blog_post:
             class: Nines\BlogBundle\Post
             route: post_show
@@ -138,4 +148,4 @@ nines_blog:
     default_category: none
 
 nines_user:
-    permission_levels: [ ROLE_ADMIN, ROLE_BLOG_ADMIN, ROLE_COMMENT_ADMIN, ROLE_CONTENT_ADMIN ]
+    permission_levels: [ ROLE_ADMIN, ROLE_BLOG_ADMIN, ROLE_COMMENT_ADMIN, ROLE_CONTENT_ADMIN, ROLE_CONTENT_EDITOR ]
