--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -6,7 +6,8 @@ security:
 
     role_hierarchy:
         ROLE_ADMIN:       [ ROLE_ADMIN, ROLE_BLOG_ADMIN, ROLE_COMMENT_ADMIN, ROLE_CONTENT_ADMIN ]
-        ROLE_SUPER_ADMIN: ROLE_ADMIN
+        ROLE_CONTENT_ADMIN: [ ROLE_CONTENT_EDITOR ]
+        ROLE_CONTENT_EDITOR: [ ROLE_USER ]
 
     providers:
         fos_userbundle:
