--- a/bower.json
+++ b/bower.json
@@ -5,13 +5,14 @@
   ],
   "description": "",
   "main": "",
-  "license": "MIT",
+  "license": "GPL",
   "homepage": "",
   "private": true,
   "dependencies": {
     "jquery": "^3.2.1",
     "bootstrap": "^3.3.7",
     "jquery-ui": "^1.12.1",
-    "typeahead.js": "^0.11.1"
+    "select2": "select2-dist#^4.0.3",
+    "select2-bootstrap-css": "^1.4.6"
   }
 }
