--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "egeloen/ckeditor-bundle": "^4.0",
         "twig/extensions": "^1.4",
         "beberlei/DoctrineExtensions": "^1.0",
-        "knplabs/knp-menu-bundle": "^2.0"
+        "knplabs/knp-menu-bundle": "^2.0",
+        "tetranz/select2entity-bundle": "^2.9"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
