--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "michael/newn",
-    "license": "proprietary",
+    "license": "gpl3",
     "type": "project",
     "autoload": {
         "psr-4": {
@@ -11,32 +11,26 @@
             "app/AppCache.php"
         ]
     },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests/"
-        }
-    },
     "require": {
         "php": ">=5.5.9",
-        "symfony/symfony": "3.2.*",
-        "doctrine/orm": "^2.5",
+        "beberlei/DoctrineExtensions": "^1.0",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-cache-bundle": "^1.2",
-        "symfony/swiftmailer-bundle": "^2.3.10",
-        "symfony/monolog-bundle": "^3.0.2",
-        "symfony/polyfill-apcu": "^1.0",
+        "doctrine/orm": "^2.5",
+        "egeloen/ckeditor-bundle": "^4.0",
+        "friendsofsymfony/user-bundle": "2.0.x-dev#612649c",
+        "incenteev/composer-parameter-handler": "^2.0",
+        "knplabs/knp-menu-bundle": "^2.0",
+        "knplabs/knp-paginator-bundle": "^2.5",
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
-        "incenteev/composer-parameter-handler": "^2.0",
-        "twig/twig": "^1.0||^2.0",
-        
-        "friendsofsymfony/user-bundle": "2.0.x-dev#612649c",
-        "knplabs/knp-paginator-bundle": "^2.5",
-        "egeloen/ckeditor-bundle": "^4.0",
-        "twig/extensions": "^1.4",
-        "beberlei/DoctrineExtensions": "^1.0",
-        "knplabs/knp-menu-bundle": "^2.0",
+        "symfony/monolog-bundle": "^3.0.2",
+        "symfony/polyfill-apcu": "^1.0",
+        "symfony/swiftmailer-bundle": "^2.3.10",
+        "symfony/symfony": "3.2.*",
         "tetranz/select2entity-bundle": "^2.9"
+        "twig/extensions": "^1.4",
+        "twig/twig": "^1.0||^2.0",
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
@@ -63,6 +57,9 @@
         "post-update-cmd": [
             "@symfony-scripts"
         ]
+    },
+    "config": {
+        "sort-packages": true
     },
     "extra": {
         "symfony-app-dir": "app",
