--- a/composer.json
+++ b/composer.json
@@ -15,21 +15,21 @@
         "php": ">=5.5.9",
         "beberlei/DoctrineExtensions": "^1.0",
         "doctrine/doctrine-bundle": "^1.6",
-        "doctrine/doctrine-cache-bundle": "^1.2",
         "doctrine/orm": "^2.5",
-        "egeloen/ckeditor-bundle": "^4.0",
-        "friendsofsymfony/user-bundle": "2.0.x-dev#612649c",
+        "egeloen/ckeditor-bundle": "^6.0",
+        "friendsofsymfony/user-bundle": "^2.0",
         "incenteev/composer-parameter-handler": "^2.0",
-        "knplabs/knp-menu-bundle": "^2.0",
-        "knplabs/knp-paginator-bundle": "^2.5",
-        "sensio/distribution-bundle": "^5.0",
-        "sensio/framework-extra-bundle": "^3.0.2",
-        "symfony/monolog-bundle": "^3.0.2",
+        "knplabs/knp-menu-bundle": "^2.2",
+        "knplabs/knp-paginator-bundle": "^2.7",
+        "sensio/distribution-bundle": "^5.0.19",
+        "sensio/framework-extra-bundle": "^5.0.0",
+        "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
-        "symfony/swiftmailer-bundle": "^2.3.10",
-        "symfony/symfony": "3.2.*",
+        "symfony/swiftmailer-bundle": "^2.6.4",
+        "symfony/symfony": "3.4.*",
+        "symfony/templating": "^3.4",
         "tetranz/select2entity-bundle": "^2.9",
-        "twig/extensions": "^1.4",
+        "twig/extensions": "^1.5",
         "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
