Updates for Symfony 3.4.
Configuration updates.
Menu builder reconfigured as a service, DI, etc.
Controllers reformatted.
Repositories updated for Beberlei doctrine extensions.
Tempalate directories renamed.

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -20,9 +20,9 @@ parameters:
 
     # make sure the symfony login cookies work with multiple apps on 
     # a single domain.
-    router.request_context.host: wphp.dv
+    router.request_context.host: localhost
     router.request_context.scheme: http
-    router.request_context.base_url: /web/app_dev.php
+    router.request_context.base_url: /newn/web/app_dev.php
     secure_cookies: false
 
     # blog stuff
