--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -2,6 +2,7 @@ imports:
     - { resource: parameters.yml }
     - { resource: security.yml }
     - { resource: services.yml }
+    - { resource: "../../vendor/beberlei/DoctrineExtensions/config/mysql.yml" }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
@@ -10,24 +11,26 @@ parameters:
 
 framework:
     #esi:             ~
-    translator:      ~
+    translator:
+        enabled: true
+        logging: false
     secret:          "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
         strict_requirements: ~
     form:            ~
     csrf_protection: ~
-    validation:      { enable_annotations: true }
+    validation:      { enabled: true, enable_annotations: true }
     #serializer:      { enable_annotations: true }
     templating:
         engines: ['twig']
     default_locale:  "%locale%"
     trusted_hosts:   ~
-    trusted_proxies: ~
     session:
-        # http://symfony.com/doc/current/reference/configuration/framework.html#handler-id
+        # http://symfony.com/doc/3.4/reference/configuration/framework.html#handler-id
         handler_id:  session.handler.native_file
         save_path:   "%kernel.root_dir%/../var/sessions/%kernel.environment%"        
+        name: PHP_SESSION_NEWN
         cookie_path: '%router.request_context.base_url%'
         cookie_domain: '%router.request_context.host%'
         cookie_secure: '%secure_cookies%'
@@ -43,10 +46,12 @@ twig:
         - 'bootstrap_3_horizontal_layout.html.twig'
         - '@NinesUtilBundle/Form/fields.html.twig'
         - 'TetranzSelect2EntityBundle:Form:fields.html.twig'
+        - '::jquery.collection.html.twig'
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
     paths:
-        '%kernel.root_dir%/../src/Nines/UtilBundle/Resources/views': NinesUtilBundle
+        '%kernel.project_dir%/src/Nines/UtilBundle/Resources/views': NinesUtilBundle
+        '%kernel.project_dir%/src/Nines/UserBundle/Resources/views': NinesUser
     exception_controller:  NinesUtilBundle:Error:showException
     globals:
         comment_service: "@feedback.comment"
@@ -67,20 +72,12 @@ doctrine:
         default_table_options:
             charset: utf8mb4
             collate: utf8mb4_unicode_ci
+#        logging: false
+#        profiling: false
     orm:
         auto_generate_proxy_classes: "%kernel.debug%"
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
-        dql:
-            datetime_functions:
-                YEAR: DoctrineExtensions\Query\Mysql\Year 
-                DATE: DoctrineExtensions\Query\Mysql\Date
-                STRTODATE: DoctrineExtensions\Query\Mysql\StrToDate                
-            string_functions:
-                MATCH_AGAINST: Nines\UtilBundle\Extensions\Doctrine\MatchAgainstFunction
-            numeric_functions:
-                INT: Nines\UtilBundle\Extensions\Doctrine\CastAsIntegerFunction
-                RAND: Nines\UtilBundle\Extensions\Doctrine\RandFunction
 
 # Swiftmailer Configuration
 swiftmailer:
