--- a/app/config/services_test.yml
+++ b/app/config/services_test.yml
@@ -24,7 +24,7 @@ services:
         resource: '../../src/AppBundle/*'
         # you can exclude directories or files
         # but if a service is unused, it's removed anyway
-        exclude: '../../src/AppBundle/{Entity,Repository,Tests}'
+        exclude: '../../src/AppBundle/{Entity,Repository,Tests,Transformer}'
 
     # controllers are imported separately to make sure they're public
     # and have a tag that allows actions to type-hint services
@@ -34,10 +34,7 @@ services:
         tags: ['controller.service_arguments']
 
     AppBundle\Menu\Builder:
+        public: true
         tags:
             - { name: knp_menu.menu_builder, method: mainMenu, alias: main}
             
-    AppBundle\Services\:
-        resource: '../../src/AppBundle/Services'
-        public: true
-
