--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,13 @@
     "jquery": "^3.2.1",
     "bootstrap": "^3.3.7",
     "jquery-ui": "^1.12.1",
-    "select2": "select2-dist#^4.0.3",
-    "select2-bootstrap-css": "^1.4.6"
+    "typeahead.js": "^0.11.1",
+    "tablesorter": "*",
+    "select2": "^4.0.4",
+    "select2-bootstrap-css": "^1.4.6",
+    "symfony-collection": "^2.1.18"
+  },
+  "resolutions": {
+    "select2": "^4.0.4"
   }
 }
