--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "require": {
         "php": ">=5.5.9",
         "beberlei/DoctrineExtensions": "^1.0",
-        "doctrine/doctrine-bundle": "^1.6",
+        "doctrine/doctrine-bundle": "^1.8",
+        "doctrine/doctrine-cache-bundle": "^1.2",
         "doctrine/orm": "^2.5",
         "egeloen/ckeditor-bundle": "^6.0",
         "friendsofsymfony/user-bundle": "^2.0",
@@ -25,7 +26,7 @@
         "sensio/framework-extra-bundle": "^5.0.0",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
-        "symfony/swiftmailer-bundle": "^2.6.4",
+        "symfony/swiftmailer-bundle": "^2.6.4 <3.0",
         "symfony/symfony": "3.4.*",
         "symfony/templating": "^3.4",
         "tetranz/select2entity-bundle": "^2.9",
@@ -33,14 +34,14 @@
         "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
-        "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^3.0",
-        
+        "doctrine/doctrine-fixtures-bundle": "^2.3",
+        "drupal/coder": "^8.2",
         "liip/functional-test-bundle": "^1.6",
-        "phpunit/phpunit": "^4.8",
-        "symfony/var-dumper": "^3.1",
-        "squizlabs/php_codesniffer": "^2.7",
-        "doctrine/doctrine-fixtures-bundle": "^2.3"
+        "phpunit/phpunit": "^5.7",
+        "sensio/generator-bundle": "^3.0",
+        "squizlabs/php_codesniffer": "^2.9",
+        "symfony/phpunit-bridge": "^3.0",
+        "symfony/var-dumper": "^3.1"
     },
     "scripts": {
         "symfony-scripts": [
