--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -29,7 +29,7 @@ framework:
     session:
         # http://symfony.com/doc/3.4/reference/configuration/framework.html#handler-id
         handler_id:  session.handler.native_file
-        save_path:   "%kernel.root_dir%/../var/sessions/%kernel.environment%"        
+        save_path:   "%kernel.root_dir%/../var/sessions/%kernel.environment%"
         name: PHP_SESSION_NEWN
         cookie_path: '%router.request_context.base_url%'
         cookie_domain: '%router.request_context.host%'
@@ -42,9 +42,9 @@ framework:
 
 # Twig Configuration
 twig:
-    form_themes:      
+    form_themes:
         - 'bootstrap_3_horizontal_layout.html.twig'
-        - '@NinesUtilBundle/Form/fields.html.twig'
+        - 'NinesUtilBundle:form:fields.html.twig'
         - 'TetranzSelect2EntityBundle:Form:fields.html.twig'
         - '::jquery.collection.html.twig'
     debug:            "%kernel.debug%"
@@ -57,7 +57,7 @@ twig:
         comment_service: "@feedback.comment"
     date:
         format: d.m.Y, H:i:s
-        interval_format: '%%d days'        
+        interval_format: '%%d days'
 
 # Doctrine Configuration
 doctrine:
@@ -111,8 +111,8 @@ fos_user:
     from_email:
         address:        noreply@'%router.request_context.host%'
         sender_name:    Do Not Reply
-            
-ivory_ck_editor:
+
+fos_ck_editor:
     input_sync: true
     default_config: newn_config
     configs:
