--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "src/Nines"]
 	path = src/Nines
-	url = git@github.com:ubermichael/nines-bundles.git
+	url = https://github.com/ubermichael/nines-bundles.git
 	branch = master
 [submodule "docs"]
 	path = docs
-	url = git@github.com:sfu-dhil/new-narratives-docs.git
+	url = https://github.com/sfu-dhil/new-narratives-docs.git
 	branch = master
 [submodule "app/Resources/SensioGeneratorBundle/skeleton"]
 	path = app/Resources/SensioGeneratorBundle/skeleton
-	url = git@github.com:ubermichael/skeleton.git
+	url = https://github.com/ubermichael/skeleton.git
 	branch = master
