--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,6 @@
         "php": ">=5.5.9",
         "beberlei/DoctrineExtensions": "^1.0",
         "doctrine/doctrine-bundle": "^1.8",
-        "doctrine/doctrine-cache-bundle": "^1.2",
         "doctrine/orm": "^2.5",
         "friendsofsymfony/ckeditor-bundle": "^1.1",
         "friendsofsymfony/user-bundle": "^2.0",
@@ -27,20 +26,18 @@
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.6.4 <3.0",
-        "symfony/symfony": "3.4.*",
+        "symfony/symfony": "3.4.* <4.0",
         "symfony/templating": "^3.4",
         "tetranz/select2entity-bundle": "^2.9",
         "twig/extensions": "^1.5",
-        "twig/twig": "^1.0||^2.0"
+        "twig/twig": "^2.5"
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "^2.3",
-        "drupal/coder": "^8.2",
+        "doctrine/doctrine-fixtures-bundle": "^3.0",
         "liip/functional-test-bundle": "^1.6",
-        "phpunit/phpunit": "^5.7",
+        "phpunit/phpunit": "^7.3",
         "sensio/generator-bundle": "^3.0",
-        "squizlabs/php_codesniffer": "^2.9",
-        "symfony/phpunit-bridge": "^3.0",
+        "symfony/phpunit-bridge": "^4.1",
         "symfony/var-dumper": "^3.1"
     },
     "scripts": {
