--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -7,6 +7,9 @@ framework:
         strict_requirements: true
     profiler: { only_exceptions: false }
 
+swiftmailer:
+    disable_delivery: true
+
 web_profiler:
     toolbar: true
     intercept_redirects: false
