make everything cool with php7/phpunit7

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -30,6 +30,6 @@ parameters:
     nines_blog.homepage_posts: 3
     nines_blog.menu_posts: 5
 
-    nines_feedback.sender: noreply@example.com
-    nines_feedback.recipient: notify@example.com
+    nines_feedback.sender: ~
+    nines_feedback.recipient: ~
     nines_feedback.subject: New feedback received
