--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -5,7 +5,7 @@ security:
         FOS\UserBundle\Model\UserInterface: bcrypt
 
     role_hierarchy:
-        ROLE_ADMIN:       [ ROLE_ADMIN, ROLE_BLOG_ADMIN, ROLE_COMMENT_ADMIN, ROLE_CONTENT_ADMIN ]
+        ROLE_ADMIN:       [ ROLE_ADMIN, ROLE_BLOG_ADMIN, ROLE_COMMENT_ADMIN, ROLE_CONTENT_ADMIN, ROLE_DC_ADMIN ]
         ROLE_CONTENT_ADMIN: [ ROLE_CONTENT_EDITOR ]
         ROLE_CONTENT_EDITOR: [ ROLE_USER ]
 
