--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1,5 +1,5 @@
 # Learn more about services, parameters and containers at
-# http://symfony.com/doc/current/book/service_container.html
+# https://symfony.com/doc/current/service_container.html
 parameters:
     container.autowiring.strict_mode: true
 
@@ -13,6 +13,11 @@ services:
         # this means you cannot fetch services directly from the container via $container->get()
         # if you need to do this, you can override this setting on individual services
         public: false
+
+    twig.extension.text:
+        class: Twig_Extensions_Extension_Text
+        tags:
+            - { name: twig.extension }
 
     Nines\FeedbackBundle\:
         resource: '../../src/Nines/FeedbackBundle/*'
@@ -50,7 +55,7 @@ services:
         resource: '../../src/AppBundle/*'
         # you can exclude directories or files
         # but if a service is unused, it's removed anyway
-        exclude: '../../src/AppBundle/{Entity,Repository,Tests}'
+        exclude: '../../src/AppBundle/{Entity,Repository,Resources,Tests}'
 
     # controllers are imported separately to make sure they're public
     # and have a tag that allows actions to type-hint services
