--- a/composer.json
+++ b/composer.json
@@ -39,11 +39,12 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.0",
-        "liip/functional-test-bundle": "^1.6",
+        "drupal/coder": "^8.2",
+        "liip/functional-test-bundle": "~2.0@alpha",
         "phpunit/phpunit": "^7.3",
         "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^4.1",
-        "symfony/var-dumper": "^3.1"
+        "squizlabs/php_codesniffer": "^3.3",
+        "symfony/phpunit-bridge": "^4.1"
     },
     "scripts": {
         "symfony-scripts": [
