--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -3,44 +3,26 @@ imports:
 
 framework:
     router:
-        resource: '%kernel.project_dir%/app/config/routing_dev.yml'
+        resource: "%kernel.root_dir%/config/routing_dev.yml"
         strict_requirements: true
     profiler: { only_exceptions: false }
-
-swiftmailer:
-    disable_delivery: true
 
 web_profiler:
     toolbar: true
     intercept_redirects: false
 
+swiftmailer:
+    disable_delivery: true
+
 monolog:
     use_microseconds: false
     handlers:
         main:
-            type: stream
-            path: '%kernel.logs_dir%/%kernel.environment%.log'
+            type: rotating_file
+            max_files: 10
+            path: "%kernel.logs_dir%/%kernel.environment%.log"
             level: warning
             channels: ['!event', '!doctrine', '!console', '!translation']
         console:
-            type: console
-            process_psr_3_messages: false
-            level: warning
+            type:   console
             channels: ['!event', '!doctrine', '!console', '!translation']
-        # To follow logs in real time, execute the following command:
-        # `bin/console server:log -vv`
-#        server_log:
-#            type: server_log
-#            process_psr_3_messages: false
-#            host: 127.0.0.1:9911
-        # uncomment to get logging in your browser
-        # you may have to allow bigger header sizes in your Web server configuration
-        #firephp:
-        #    type: firephp
-        #    level: info
-        #chromephp:
-        #    type: chromephp
-        #    level: info
-
-#swiftmailer:
-#    delivery_addresses: ['me@example.com']
