--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -29,6 +29,7 @@ parameters:
     nines_blog.excerpt_length: 100
     nines_blog.homepage_posts: 3
     nines_blog.menu_posts: 5
+    nines_text.trim_length: 50
 
     nines_feedback.sender: ~
     nines_feedback.recipient: ~
