start working on the oclc subjects stuff.

--- a/.htaccess
+++ b/.htaccess
@@ -11,5 +11,5 @@
   RewriteCond %{REQUEST_URI}::$1 ^(/.+)/(.*)::\2$
   RewriteRule ^(.*) - [E=BASE:%1]
 
-  RewriteRule ^$ %{ENV:BASE}/web/app_dev.php [R,L]
+  RewriteRule ^$ /newn/web/app_dev.php [R,L]
 </IfModule>
