--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,11 @@
         "doctrine/orm": "^2.5",
         "friendsofsymfony/ckeditor-bundle": "^1.1",
         "friendsofsymfony/user-bundle": "^2.0",
+        "guzzlehttp/guzzle": "^6.3",
         "incenteev/composer-parameter-handler": "^2.0",
         "knplabs/knp-menu-bundle": "^2.2",
         "knplabs/knp-paginator-bundle": "^2.7",
+        "oclc/auth" : ">=3.0",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^5.0.0",
         "symfony/monolog-bundle": "^3.1.0",
@@ -46,6 +48,14 @@
         "squizlabs/php_codesniffer": "^3.3",
         "symfony/phpunit-bridge": "^4.1"
     },
+
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/OCLC-Developer-Network/oclc-auth-php.git"
+        }
+    ],
+
     "scripts": {
         "symfony-scripts": [
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
