Add a switch to allow or prevent logins. composer update.

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -54,5 +54,8 @@ parameters:
     # eg. "*.example.com/application"
     dhil.piwik_domain: ~
 
+    # Prevent logins by setting this to false
+    dhil.allow_logins: true
+
     oclc.key: ~
     oclc.secret: ~
