--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "php": ">=7.1.0",
         "beberlei/doctrineextensions": "^1.0",
         "doctrine/doctrine-bundle": "^1.8",
+        "doctrine/doctrine-migrations-bundle": "^2.0",
         "doctrine/orm": "^2.5",
         "friendsofsymfony/ckeditor-bundle": "^1.1",
         "friendsofsymfony/user-bundle": "^2.0",
@@ -37,7 +38,7 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "knplabs/knp-menu-bundle": "^2.2",
         "knplabs/knp-paginator-bundle": "^4.0",
-        "oclc/auth" : ">=3.0",
+        "oclc/auth": ">=3.0",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^5.0.0",
         "symfony/monolog-bundle": "^3.1.0",
