--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
         "oclc/auth": ">=3.0",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^5.0.0",
-        "symfony/monolog-bundle": "^3.1.0",
+        "symfony/monolog-bundle": "3.3.*",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.6.4 <3.0",
         "symfony/symfony": "3.4.* <4.0",
