prep for deploy.

--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ APP_SECRET=dee21d16cbd9574967628e11a6049da5
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=null://null
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
