--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": "^7.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/common": "^2.13",
         "guzzlehttp/guzzle": "^6.5",
         "ninsuo/symfony-collection": "^2.1",
         "oclc/auth": "^4.3",
@@ -22,7 +23,7 @@
         "symfony/intl": "4.4.*",
         "symfony/mailer": "4.4.*",
         "symfony/monolog-bundle": "^3.1",
-        "symfony/orm-pack": "1.0.*",
+        "symfony/orm-pack": "*",
         "symfony/process": "4.4.*",
         "symfony/security-bundle": "4.4.*",
         "symfony/serializer-pack": "1.0.*",
