--- a/.env
+++ b/.env
@@ -37,8 +37,8 @@ ROUTE_PROTOCOL=http
 ROUTE_HOST=localhost
 ROUTE_BASE=
 
-# Piwik
-PIWIK_ENABLED=false
+# Analytics
+MATOMO_ENABLED=${:-false}
 
 # OCLC
 OCLC_KEY=
