--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -11,10 +11,10 @@ twig:
     globals:
         comment_service: '@Nines\FeedbackBundle\Services\CommentService'
         text_service: '@Nines\UtilBundle\Services\Text'
-        piwik_enabled: '%dhil.piwik_enabled%'
-        piwik_url: '%dhil.piwik_url%'
-        piwik_siteid: '%dhil.piwik_siteid%'
-        piwik_domain: '%dhil.piwik_domain%'
+        matomo_enabled: '%dhil.matomo_enabled%'
+        matomo_url: '%dhil.matomo_url%'
+        matomo_siteid: '%dhil.matomo_siteid%'
+        matomo_domain: '%dhil.matomo_domain%'
     date:
         format: d.m.Y, H:i:s
         interval_format: '%%d days'
