--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -33,7 +33,7 @@ security:
                 name: NEWN_REMEMBER_ME
 
     role_hierarchy:
-        ROLE_ADMIN:       [ ROLE_ADMIN, ROLE_BLOG_ADMIN, ROLE_COMMENT_ADMIN, ROLE_CONTENT_ADMIN, ROLE_DC_ADMIN ]
+        ROLE_ADMIN:       [ ROLE_ADMIN, ROLE_BLOG_ADMIN, ROLE_COMMENT_ADMIN, ROLE_CONTENT_ADMIN ]
         ROLE_CONTENT_ADMIN: [ ROLE_CONTENT_EDITOR ]
         ROLE_CONTENT_EDITOR: [ ROLE_USER ]
 
@@ -50,6 +50,5 @@ security:
         - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
 
         # Other controllers that should never be public
-        - { path: ^/dublin_core/element, roles: ROLE_USER }
         - { path: ^/feedback/comment_note, roles: ROLE_USER }
         - { path: ^/feedback/comment_status, roles: ROLE_USER }
