--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -4,15 +4,15 @@ nines_blog:
   prefix: /blog
   resource: '@NinesBlogBundle/Controller'
 
-nines_dc:
-  type: annotation
-  prefix: /dublin_core
-  resource: '@NinesDublinCoreBundle/Controller'
-
 nines_editor:
   type: annotation
   prefix: /editor
   resource: '@NinesEditorBundle/Controller'
+
+nines_media:
+  type: annotation
+  prefix: /media
+  resource: '@NinesMediaBundle/Controller'
 
 nines_feedback:
   type: annotation
@@ -21,4 +21,3 @@ nines_feedback:
 
 nines_user:
   resource: '@NinesUserBundle/Resources/config/routes.yaml'
-
