update for new testing.

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,8 @@ public/docs
 *.sql
 src/.preload.php
 data
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
