--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -31,6 +31,7 @@ security:
                 samesite: strict
                 httponly: true
                 name: NEWN_REMEMBER_ME
+                remember_me_parameter: remember_me
 
     role_hierarchy:
         ROLE_ADMIN:       [ ROLE_ADMIN, ROLE_BLOG_ADMIN, ROLE_COMMENT_ADMIN, ROLE_CONTENT_ADMIN ]
