--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -34,7 +34,14 @@ security:
                 remember_me_parameter: remember_me
 
     role_hierarchy:
-        ROLE_ADMIN:       [ ROLE_ADMIN, ROLE_BLOG_ADMIN, ROLE_COMMENT_ADMIN, ROLE_CONTENT_ADMIN ]
+        ROLE_ADMIN:
+            - ROLE_BLOG_ADMIN
+            - ROLE_CONTENT_ADMIN
+            - ROLE_DC_ADMIN
+            - ROLE_FEEDBACK_ADMIN
+            - ROLE_MEDIA_ADMIN
+            - ROLE_USER_ADMIN
+            - ROLE_USER
         ROLE_CONTENT_ADMIN: [ ROLE_CONTENT_EDITOR ]
         ROLE_CONTENT_EDITOR: [ ROLE_USER ]
 
