--- a/.env
+++ b/.env
@@ -36,6 +36,7 @@ DATABASE_URL=mysql://newn:password@db:3306/newn?serverVersion=mariadb-10.11.0
 ROUTE_PROTOCOL=http
 ROUTE_HOST=localhost
 ROUTE_BASE=
+TRUSTED_PROXIES=127.0.0.1
 
 # Comments etc.
 # Use something like this in .env.local FEEDBACK_RECIPIENTS='["a@example.com", "b@example.com"]'
